--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 </head>
 <body>
 
+  <article class="">
+    <header>
+      <h1>Super Epic Tile Layer</h1>
+      <strong>$35</strong>
+      <em>(In stock)</em>
+      <img src="images/placeholder-4by3.svg" alt="">
+    </header>
+    <dl class="">
+      <dt>Ages:</dt>
+      <dd>8+</dd>
+      <dt>Number players:</dt>
+      <dd>2-5</dd>
+      <dt>Length:</dt>
+      <dd>45 min</dd>
+    </dl>
+    <h2>Average Rating:</h2>
+    <meter value="4" min="0" max="5"></meter>
+    <a href="#">[Add to Wishlist!]</a>
+    <a href="#">[Add to Cart]</a>
 
+  </article>
 
 </body>
 </html>
